Javadoc fixes. .valueOf() to avoid boxing/unboxing conversion warnings. Initialize variable values to default.